<resources>
    <string name="app_name">SairaMedicalStore</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <!--
    <string name="default_web_client_id" translatable="false">CHANGE-ME</string>
-->
    <string name="progress_dialog_authenticating_with_firebase">Authenticating with Firebase…</string>
    <string name="title_activity_main">Saira</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- Strings related to MainActivity -->
    <string name="hint_search">Search</string>

    <!-- Strings related to AddOrUpdateMedicineActivity -->
    <string name="title_activity_add_new_medicine">Create Medicine</string>
    <string name="button_text_upload_medicine_image">Upload Image</string>
    <string name="hint_medicine_name">Medicine Name</string>
    <string name="hint_medicine_manufacturer_name">Manufacturer Name</string>
    <string name="hint_medicine_composition">Composition</string>
    <string name="hint_display_category">Display Category (Opt)</string>
    <string name="hint_medicine_category">Category Name</string>
    <string name="hint_medicine_type">Medicine Type</string>
    <string name="hint_no_of_items_in_one_Pack">Items in one pack</string>
    <string name="hint_price_per_pack">Price per Pack</string>
    <string name="hint_is_medicine_availability">Availability</string>
    <string name="hint_is_loose_medicine_available">Loose medicine availability</string>
    <string name="create_medicine">Create Medicine</string>
    <string name="update_medicine">Update Medicine</string>
    <string-array name="availability_options">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="availability_values">
        <item>True</item>
        <item>False</item>
    </string-array>

    <!-- Strings related to AddNewOffer -->
    <string name="title_activity_add_new_offer">Create New Offer</string>
    <string name="hint_offer_name">Offer Name</string>
    <string name="hint_offer_description">Offer Description</string>
    <string name="hint_offer_value">Offer Value</string>
    <string name="hint_offer_valid_for_minimum_perches">Offer Valid For Minimum Perches</string>
    <string name="hint_offer_maximum_discountable_amount">Maximum Discountable Amount</string>
    <string-array name="offer_value_type_options">
        <item>RS</item>
        <item>%</item>
    </string-array>
    <string-array name="offer_value_type_values">
        <item>RS</item>
        <item>%</item>
    </string-array>
    <string-array name="boolean_options">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="boolean_values">
        <item>True</item>
        <item>False</item>
    </string-array>

    <!-- Strings related to CreateOrUpdatePoster -->
    <string name="hint_poster_name">Poster Name</string>
    <string name="hint_poster_about">About Poster</string>

    <!-- Spinner value for cancel order reason -->
    <string-array name="cancel_reason_options">
        <item>Cancellation Reason</item>
        <item>Order created by mistake</item>
        <item>Shipping cost way too high</item>
        <item>Item price way too high</item>
        <item>Found cheaper some where else</item>
        <item>Need to change payment method</item>
        <item>Other</item>
    </string-array>

    <!-- Spinner value for return order reason -->
    <string-array name="return_reason_options">
        <item>Return Reason</item>
        <item>Defected product</item>
        <item>Not up to the mark</item>
        <item>Not value for the money</item>
        <item>Item price way too high</item>
        <item>Found cheaper some where else</item>
        <item>Other</item>
    </string-array>

    <!-- Spinner value for return order reason -->
    <string-array name="country_code_options">
        <item>+91</item>
        <item>+92</item>
    </string-array>

    <!-- Spinner value for return order reason -->
    <string-array name="query_title_options">
        <item>Select Reason</item>
        <item>Damaged Products</item>
        <item>Incomplete Order</item>
        <item>Order Not Received</item>
        <item>Payment Issues</item>
        <item>Upload Prescription Issues</item>
        <item>Wrong Product Received</item>
        <item>Other</item>
    </string-array>

    <!-- Spinner value for user type reason -->
    <string-array name="user_type_options">
        <item>END USER</item>
        <item>DEVELOPER</item>
        <item>OWNER</item>
        <item>EMPLOYEE</item>
    </string-array>

    <!-- Spinner value for active options -->
    <string-array name="active_options">
        <item>ACTIVE</item>
        <item>IN ACTIVE</item>
    </string-array>

    <!-- Spinner value for pin code search by options-->
    <string-array name="pin_code_search_by_options">
        <item>PIN</item>
        <item>Address</item>
    </string-array>

</resources>
